fixing spacing

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ main {
   -webkit-text-fill-color: transparent;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 800px){
   main {
   background:#65dfc9 ;
   }
@@ -190,6 +190,12 @@ main {
   .glass {
     display: grid;
     width: auto;
+    border-radius: 0px;
+  }
+
+  .status {
+    margin-top: 1rem ;
+    margin-bottom: 0;
   }
 
   .status input {
@@ -204,7 +210,7 @@ main {
   .pro {
     margin-bottom: 2rem;
   }
-  
+
   .games {
     margin: auto;
   }
